[JSC][WASM][Debugger] Fix library:; sent before debugger is ready and update stop description pattern in tests https://bugs.webkit.org/show_bug.cgi?id=312408 rdar://174862846

Reviewed by Mark Lam.

This patch is a follow-up fix for [1].

Guard needsLibraryRequery() with isDebuggerReady() so library:; is not included in
the stop reply to LLDB's initial ? packet. Without the guard, modules registered
before LLDB attached would leave m_unnotifiedModuleIds non-empty, causing the ?
reply to carry library:; before the first qXfer:libraries:read had even been processed.
This would confuse LLDB during the initial connection handshakes.

Also update two test patterns to match the new stop description format introduced
in [1] ("new wasm module loaded" -> "loaded new wasm module with ids: 1").

[1] https://commits.webkit.org/311291@main

Canonical link: https://commits.webkit.org/311389@main